--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     <title>Raffles Institute</title>
 
+    <meta name="Raffles Institue"
+        content="Raffles Design Institute provides you with a global high-quality education. From your place you will get the best ever.">
+
+    <link rel="canonical" href="https://www.rafflesksa.com/">
+
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/include/css/page-builder.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/revslider/public/assets/css/settings.css' type='text/css' media='all' />
@@ -31,6 +36,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
+
+
+
+
+
 
 <body
     class="home page-template-default page page-id-2039 gdlr-core-body woocommerce-no-js tribe-no-js kingster-body kingster-body-front kingster-full  kingster-with-sticky-navigation  kingster-blockquote-style-1 gdlr-core-link-to-lightbox">
@@ -209,7 +219,7 @@
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
                                                             style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 80px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-transform: uppercase;">
-                                                            DESIGN YOUR FUTURE</div>
+                                                            <h1 style="color: white; font-weight: 300;">DESIGN YOUR FUTURE</h1></div>
                                                     </li>
 
 
@@ -969,9 +979,10 @@
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
-                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
-                                    
+                                <input id="phone" type="number" name="phone" size="40"
+                                    placeholder="Type your phone number" aria-required="true" aria-invalid="false"
+                                    required pattern="[+0-9\s]+">
+
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
@@ -1040,8 +1051,8 @@
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
                         <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
-                                    All
-                                    Rights Reserved</div>
+                            All
+                            Rights Reserved</div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
