--- a/about-us-ar.html
+++ b/about-us-ar.html
@@ -335,7 +335,7 @@
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font dr-font title7"
                                                             data-aos="fade-left" data-aos-duration="500"
-                                                            data-aos-delay="200" id="h3_983a_0">د/ وفــاء الــرشــود
+                                                            data-aos-delay="200" id="h3_983a_0">د/ وفــاء الــرشــيد
                                                         </h3>
                                                     </div>
                                                 </div>
@@ -456,7 +456,8 @@
                                                         <p data-aos="fade-right" data-aos-duration="500"
                                                             class="p-about ar-float ar-space ar-font"> نحن ملتزمون
                                                             بتعزيز
-                                                            حب طالباتنا للتعلم وتشجيعهم على تجربــة أشياء جديدة<br> ومنحهم
+                                                            حب طالباتنا للتعلم وتشجيعهم على تجربــة أشياء جديدة<br>
+                                                            ومنحهم
                                                             أساساً متيناً لبناء مستقبل مشرق علاوة على ذلك، يواصل معهد
                                                             رافلز<br> سعية لتحقيق التميز في تقديم تعليم عالي الجودة
                                                             وتوفير
@@ -566,7 +567,8 @@
                                                             رافلز
                                                             رائداً
                                                             أساسياً لتعليم التصميم بالمملكة العربية السعودية، كما نسعى
-                                                            دائمـاً للتوسع في مــجــالات الــدراسـة وتـعزيــز بـرامـجـنــا
+                                                            دائمـاً للتوسع في مــجــالات الــدراسـة وتـعزيــز
+                                                            بـرامـجـنــا
                                                             المبتكــرة<br><br>
                                                             نسعى لتمكين المرأة السعودية، لجعل العالم كله مـتـاحــاً لهـا
                                                             ومضاعفــة الفرص لمستقبلها وتجهيزها للدخول بثقة إلى سوق العمل
@@ -657,9 +659,10 @@
                                                                 نــســعـــى جــاهــديــن لــفــتــح عـقـول
                                                                 طـالباتنا
                                                                 وتمكينهم مـن
-                                                                الــتــغــلــب عــلــى الــحــواجـــــز، لــكــي نــطــلــق العـنــان
+                                                                الــتــغــلــب عــلــى الــحــواجـــــز، لــكــي
+                                                                نــطــلــق العـنــان
                                                                 لإمكــانــاتهــم ونـكشــف عــن
-                                                                مواهــبـــهـــم الخــفـيــة عــن طــريــق تطــويــر 
+                                                                مواهــبـــهـــم الخــفـيــة عــن طــريــق تطــويــر
                                                                 مواهــبـهـم الحسيــة بـشكـل يتجاوز
                                                                 الحواس الخــمــــس
                                                             </p>
@@ -678,14 +681,19 @@
                                                             <p class="ar-float ar-space ar-font"> نحــن مـلـتزمون بتوفير
                                                                 بيئة
                                                                 تعليمية حيويـة
-                                                                ومـثـيـرة لـكـي تـزرع فـي طــالباتنا الأحسـاس بالحس الخاص برافلز،
-                                                                بدءاً من شكل الحـرم الــجــامــعــي الــخــارجــي<br>إلى كيانه الداخلي
+                                                                ومـثـيـرة لـكـي تـزرع فـي طــالباتنا الأحسـاس بالحس
+                                                                الخاص برافلز،
+                                                                بدءاً من شكل الحـرم الــجــامــعــي الــخــارجــي<br>إلى
+                                                                كيانه الداخلي
                                                                 إلــى
-                                                                ثــقــافــة الــشــبـــاب النابضة بالحياة والمبادرة والإبداع،
+                                                                ثــقــافــة الــشــبـــاب النابضة بالحياة والمبادرة
+                                                                والإبداع،
                                                                 يتسم كل
-                                                                جــانــب مــن جــوانـب الـحـرم الجامعـي لدينا بالطاقة الإيجابيــة
+                                                                جــانــب مــن جــوانـب الـحـرم الجامعـي لدينا بالطاقة
+                                                                الإيجابيــة
                                                                 التي
-                                                                تـتـرجـم إلـى موقـف إيجابي نسميه إحساس رافلز، سوف يحتضـن هـذا
+                                                                تـتـرجـم إلـى موقـف إيجابي نسميه إحساس رافلز، سوف يحتضـن
+                                                                هـذا
                                                                 الإحـسـاس كـل طـالـبـة</p>
                                                         </div>
                                                     </div>
@@ -712,10 +720,10 @@
 
             <section class="subscription-block subscription-block-home" style="margin-top: -205px;">
                 <div>
-                   <div class="subscribe-box">
+                    <div class="subscribe-box">
                         <div class="inner wow fadeIn">
                             <h2 class="text3-ar">تواصل معنا الآن<br>
-                                 لنرى كيف يمكننا مساعدتك 
+                                لنرى كيف يمكننا مساعدتك
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input id="phone" type="number" name="phone" size="40" dir="rtl"
@@ -748,7 +756,7 @@
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                         <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="mailto:Info@raffles-me.com"
                                                 style="float: right;">Info@raffles-me.com</a></li>
                                         <li class="menu-item" style="direction: rtl;"><a
@@ -766,11 +774,12 @@
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                         <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
-                                                style="float: right;direction: ltr;">+966 55 011 1719</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
-                                                style="float: right;direction: ltr;">+966 55 299 5509</a></li>
-
+                                        <li class="menu-item numb-font" style="direction: rtl;"><a
+                                                href="tel:+966550111719" style="float: right;direction: ltr;">+966 55
+                                                011 1719</a></li>
+                                        <li class="menu-item numb-font" style="direction: rtl;"><a
+                                                href="tel:+966552995509" style="float: right;direction: ltr;">+966 55
+                                                299 5509</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -784,9 +793,10 @@
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                       <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
-                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25، البيوت المكتبية، طريق تركي بن
+                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25،
+                                                البيوت المكتبية، طريق تركي بن
                                                 عبدالعزيز 11454، الرياض،المملكة العربية السعودية.</a></li>
                                     </ul>
                                 </div>
