--- a/jewelery-design-ar.html
+++ b/jewelery-design-ar.html
@@ -457,11 +457,12 @@
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                         <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
-                                                style="float: right;direction: ltr;">+966 55 011 1719</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
-                                                style="float: right;direction: ltr;">+966 55 299 5509</a></li>
-
+                                        <li class="menu-item numb-font" style="direction: rtl;"><a
+                                                href="tel:+966550111719" style="float: right;direction: ltr;">+966 55
+                                                011 1719</a></li>
+                                        <li class="menu-item numb-font" style="direction: rtl;"><a
+                                                href="tel:+966552995509" style="float: right;direction: ltr;">+966 55
+                                                299 5509</a></li>
                                     </ul>
                                 </div>
                             </div>
