--- a/index-ar.html
+++ b/index-ar.html
@@ -98,7 +98,7 @@
                                 style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
                                 href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            <a href="tel:+966552995509">+966 55 299 5509</a>
+                            <a class="numb-font" href="tel:+966552995509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <div class="kingster-top-bar-right-social"></div>
@@ -1037,9 +1037,9 @@
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
+                                        <li class="menu-item numb-font" style="direction: rtl;"><a href="tel:+966550111719"
                                                 style="float: right;direction: ltr;">+966 55 011 1719</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
+                                        <li class="menu-item numb-font" style="direction: rtl;"><a href="tel:+966552995509"
                                                 style="float: right;direction: ltr;">+966 55 299 5509</a></li>
                                     </ul>
                                 </div>
@@ -1056,7 +1056,8 @@
                                         style="margin-right: 13%;">
                                         <li class="menu-item" style="direction: rtl;"><a
                                                 href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
-                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25، البيوت المكتبية، طريق تركي بن
+                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25،
+                                                البيوت المكتبية، طريق تركي بن
                                                 عبدالعزيز 11454، الرياض،المملكة العربية السعودية.</a></li>
                                     </ul>
                                 </div>
