--- a/interior-design-ar.html
+++ b/interior-design-ar.html
@@ -89,7 +89,7 @@
                                 style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
                                 href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            <a href="tel:+966552995509">+966 55 299 5509</a>
+                            <a class="numb-font" href="tel:+966552995509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <div class="kingster-top-bar-right-social"></div>
@@ -205,7 +205,8 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div
                                                         class="gdlr-core-text-box-item-content prg-width p-color ar-font mrg-lft pdiv1">
-                                                        <p class="ar-float ar-space"> التصميم الداخلي هو الفن والعلم الذي يُعزِّز
+                                                        <p class="ar-float ar-space"> التصميم الداخلي هو الفن والعلم
+                                                            الذي يُعزِّز
                                                             المباني من
                                                             الداخل، ويزيد من الناحية الجمالية لهم.
                                                             تشمل دراسة التصميم الداخلي، تصميم وتخطيط الفراغات والمساحات
@@ -250,7 +251,8 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5"
+                                                        dir="rtl">
                                                         <a>الإِبـــداع</a>
                                                     </h3>
                                                     <p class="font-css ar-float ar-font text8">
@@ -270,7 +272,8 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5"
+                                                        dir="rtl">
                                                         <a>الـرقـمـي</a>
                                                     </h3>
                                                     <p class="font-css ar-float ar-font text8">
@@ -290,7 +293,8 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5"
+                                                        dir="rtl">
                                                         <a>الـتـصـمـيـم</a>
                                                     </h3>
                                                     <p class="font-css ar-float ar-font text8">
@@ -310,7 +314,8 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5" dir="rtl">
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font title5"
+                                                        dir="rtl">
                                                         <a>الـنـظـريـة</a>
                                                     </h3>
                                                     <p class="font-css ar-float ar-font text8">
@@ -335,7 +340,8 @@
                                                 style="max-width: 1440px ;">
                                                 <div class="gdlr-core-pbf-element">
                                                     <h3 id="inter"
-                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3-css ar-font visualp" dir="rtl">
+                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3-css ar-font visualp"
+                                                        dir="rtl">
                                                         الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم<br> أو
                                                         البكالوريوس للتصميم الداخلي :
                                                     </h3>
@@ -395,10 +401,10 @@
             </div>
             <section class="subscription-block mrg29">
                 <div>
-                   <div class="subscribe-box">
+                    <div class="subscribe-box">
                         <div class="inner wow fadeIn">
                             <h2 class="text3-ar">تواصل معنا الآن<br>
-                                 لنرى كيف يمكننا مساعدتك 
+                                لنرى كيف يمكننا مساعدتك
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input id="phone" type="number" name="phone" size="40" dir="rtl"
@@ -440,7 +446,7 @@
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                         <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="mailto:Info@raffles-me.com"
                                                 style="float: right;">Info@raffles-me.com</a></li>
                                         <li class="menu-item" style="direction: rtl;"><a
@@ -477,9 +483,10 @@
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                       <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
-                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25، البيوت المكتبية، طريق تركي بن
+                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25،
+                                                البيوت المكتبية، طريق تركي بن
                                                 عبدالعزيز 11454، الرياض،المملكة العربية السعودية.</a></li>
                                     </ul>
                                 </div>
