--- a/visual-communication-ar.html
+++ b/visual-communication-ar.html
@@ -89,7 +89,7 @@
                                 style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
                                 href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            <a href="tel:+966552995509">+966 55 299 5509</a>
+                            <a class="numb-font" href="tel:+966552995509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <div class="kingster-top-bar-right-social"></div>
@@ -460,9 +460,9 @@
                                             <ul id="menu-campus-life"
                                                 class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                                 style="margin-right: 13%;">
-                                                  <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
+                                                  <li class="menu-item numb-font" style="direction: rtl;"><a href="tel:+966550111719"
                                                 style="float: right;direction: ltr;">+966 55 011 1719</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
+                                        <li class="menu-item numb-font" style="direction: rtl;"><a href="tel:+966552995509"
                                                 style="float: right;direction: ltr;">+966 55 299 5509</a></li>
         
                                             </ul>
