--- a/course-admission-ar.html
+++ b/course-admission-ar.html
@@ -251,7 +251,8 @@
                                                                 وتأكيده</b>
                                                         </p>
                                                         <br>
-                                                        <a class="terms ar-font ar-float terms-mrg" href="terms-conditions-ar.html">الشروط
+                                                        <a class="terms ar-font ar-float terms-mrg"
+                                                            href="terms-conditions-ar.html">الشروط
                                                             والأحكام
                                                         </a><br>
                                                         <div class="form-check mrg-agree" dir="rtl">
@@ -294,19 +295,19 @@
         <section class="subscription-block mrg11">
             <div>
                 <div class="subscribe-box">
-                        <div class="inner wow fadeIn">
-                            <h2 class="text3-ar">تواصل معنا الآن<br>
-                                 لنرى كيف يمكننا مساعدتك 
-                            </h2>
-                            <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40" dir="rtl"
-                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
-                                    pattern="[+0-9\s]+" class="ar-font">
+                    <div class="inner wow fadeIn">
+                        <h2 class="text3-ar">تواصل معنا الآن<br>
+                            لنرى كيف يمكننا مساعدتك
+                        </h2>
+                        <form id="contact" name="contact" action="" method="post">
+                            <input id="phone" type="number" name="phone" size="40" dir="rtl"
+                                placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
+                                pattern="[+0-9\s]+" class="ar-font">
 
-                                <input type="submit" id="submit" name="submit" value="سـجـل الآن" class="ar-font">
-                            </form>
-                        </div>
+                            <input type="submit" id="submit" name="submit" value="سـجـل الآن" class="ar-font">
+                        </form>
                     </div>
+                </div>
             </div>
         </section>
         <!-- end subscription-block -->
@@ -333,12 +334,10 @@
                                 <ul id="menu-our-campus"
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                     style="margin-right: 13%;">
-                                   <li class="menu-item" style="direction: rtl;"><a
-                                                href="mailto:Info@raffles-me.com"
-                                                style="float: right;">Info@raffles-me.com</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a
-                                                href="mailto:Career@raffles-me.com"
-                                                style="float: right;">Career@raffles-me.com</a></li>
+                                    <li class="menu-item" style="direction: rtl;"><a href="mailto:Info@raffles-me.com"
+                                            style="float: right;">Info@raffles-me.com</a></li>
+                                    <li class="menu-item" style="direction: rtl;"><a href="mailto:Career@raffles-me.com"
+                                            style="float: right;">Career@raffles-me.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -351,10 +350,10 @@
                                 <ul id="menu-campus-life"
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                     style="margin-right: 13%;">
-                                    <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
-                                                style="float: right;direction: ltr;">+966 55 011 1719</a></li>
-                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
-                                                style="float: right;direction: ltr;">+966 55 299 5509</a></li>
+                                    <li class="menu-item numb-font" style="direction: rtl;"><a href="tel:+966550111719"
+                                            style="float: right;direction: ltr;">+966 55 011 1719</a></li>
+                                    <li class="menu-item numb-font" style="direction: rtl;"><a href="tel:+966552995509"
+                                            style="float: right;direction: ltr;">+966 55 299 5509</a></li>
 
                                 </ul>
                             </div>
@@ -369,10 +368,11 @@
                                 <ul id="menu-academics"
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                     style="margin-right: 13%;">
-                                     <li class="menu-item" style="direction: rtl;"><a
-                                                href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
-                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25، البيوت المكتبية، طريق تركي بن
-                                                عبدالعزيز 11454، الرياض،المملكة العربية السعودية.</a></li>
+                                    <li class="menu-item" style="direction: rtl;"><a
+                                            href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
+                                            style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25،
+                                            البيوت المكتبية، طريق تركي بن
+                                            عبدالعزيز 11454، الرياض،المملكة العربية السعودية.</a></li>
                                 </ul>
                             </div>
                         </div>
