--- a/terms-conditions-ar.html
+++ b/terms-conditions-ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl" class="no-js">
+<html lang="ar" class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -179,7 +179,8 @@
                                 </p>
                                 <p class="p-about4 ar-float" style="font-weight: 500;">2. الرسوم والمصاريف
                                 </p>
-                                <p class="p-about5 ar-float ar-mrg12">• رسوم الطلب: في حالة رفض الطالبة من قبل لجنة القبول، لن
+                                <p class="p-about5 ar-float ar-mrg12">• رسوم الطلب: في حالة رفض الطالبة من قبل لجنة
+                                    القبول، لن
                                     يتم رد
                                     رسوم الطلب.
                                 </p>
@@ -257,14 +258,16 @@
                                 <br>
                                 <p class="p-about4 ar-float" style="font-weight: 500;">4. مراجعة المناهج
                                 </p>
-                                <p class="p-about5 ar-float ar-mrg9">تفاصيل المناهج واردة في دليل الدورة. يحتفظ المعهد بالحق في
+                                <p class="p-about5 ar-float ar-mrg9">تفاصيل المناهج واردة في دليل الدورة. يحتفظ المعهد
+                                    بالحق في
                                     مراجعة المنهج بانتظام وإجراء تغييرات عليه دون إشعار مسبق.
 
                                 </p>
                                 <p class="p-about4 ar-float ar-mrg10" style="font-weight: 500;">5. الاختبارات والتقييمات
 
                                 </p>
-                                <p class="p-about5 ar-float ar-mrg11">للتأهل للعديد من جوائز كلية رافلز للتعليم العالي، سيُطلب
+                                <p class="p-about5 ar-float ar-mrg11">للتأهل للعديد من جوائز كلية رافلز للتعليم العالي،
+                                    سيُطلب
                                     من الطالبات إكمال أعمال الدورة المختلفة والامتحانات والمشاريع وبرنامج الملحق الصناعي
                                     وأشكال التقييم الأخرى المنصوص عليها في البرامج المختلفة التي يقدمها المعهد بنجاح.
                                     تنطبق شروط مختلفة على الامتحانات. سيتم قبول الطالبات فقط في الامتحانات بشرط أن يكون
@@ -299,7 +302,8 @@
                                 </p>
                                 <p class="p-about4 ar-float" style="font-weight: 500;">8. الفصول الدراسية
                                 </p>
-                                <p class="p-about5 ar-float ar-mrg9">يتم جدولة الدروس في أيام الأسبوع بين الساعة 8 صباحًا حتى 4
+                                <p class="p-about5 ar-float ar-mrg9">يتم جدولة الدروس في أيام الأسبوع بين الساعة 8
+                                    صباحًا حتى 4
                                     مساءً. ويمكن أن يخضع للتغيير حسب تقدير المعهد عند الضرورة.
                                 </p>
 
@@ -317,10 +321,10 @@
 
             <section class="subscription-block">
                 <div>
-                   <div class="subscribe-box">
+                    <div class="subscribe-box">
                         <div class="inner wow fadeIn">
                             <h2 class="text3-ar">تواصل معنا الآن<br>
-                                 لنرى كيف يمكننا مساعدتك 
+                                لنرى كيف يمكننا مساعدتك
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input id="phone" type="number" name="phone" size="40" dir="rtl"
@@ -353,7 +357,7 @@
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                         <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="mailto:Info@raffles-me.com"
                                                 style="float: right;">Info@raffles-me.com</a></li>
                                         <li class="menu-item" style="direction: rtl;"><a
@@ -390,9 +394,10 @@
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                       <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
-                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25، البيوت المكتبية، طريق تركي بن
+                                                style="float: right; text-align: right; font-size: 15px;">مكتب رقم 25،
+                                                البيوت المكتبية، طريق تركي بن
                                                 عبدالعزيز 11454، الرياض،المملكة العربية السعودية.</a></li>
                                     </ul>
                                 </div>
