--- a/course-admission-ar.html
+++ b/course-admission-ar.html
@@ -160,7 +160,7 @@
 
 
             <div class="kingster-page-title-wrap  kingster-style-medium kingster-left-align"
-                style="background-image: url(img/13-01.png);">
+                style="background-image: url(img/13-01.webp);">
                 <div class="kingster-header-transparent-substitute"></div>
                 <div class="kingster-page-title-container kingster-container">
                     <div class="kingster-page-title-content kingster-item-pdlr">
